--- a/scikit/Classic ML/K_Nearest_Neighboors.ipynb
+++ b/scikit/Classic ML/K_Nearest_Neighboors.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 305,
+   "execution_count": 9,
    "id": "e6bc6e70-ba77-41ae-9287-9a099da7cf1f",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 306,
+   "execution_count": 10,
    "id": "88e572c2-b4e8-47e8-bc76-173c6e23f94b",
    "metadata": {},
    "outputs": [],
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 307,
+   "execution_count": 11,
    "id": "f390aeeb-1e0c-43bb-ad00-0ff6ac32e354",
    "metadata": {},
    "outputs": [],
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 308,
+   "execution_count": 12,
    "id": "50cfcf12-b2f7-4ec7-9d02-37587d746486",
    "metadata": {},
    "outputs": [
@@ -101,7 +101,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.978494623655914\n"
+      "Accuracy: 0.953405017921147\n"
      ]
     }
    ],
@@ -141,18 +141,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 309,
+   "execution_count": 13,
    "id": "2f1bd7f8-723a-405f-932f-a71f1412b5fc",
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn import preprocessing, neighbors\n",
-    "from sklearn.model_selection import cross_validate, train_test_split"
+    "from sklearn.model_selection import cross_validate, train_test_split\n",
+    "from sklearn.neighbors import KNeighborsClassifier  # Добавлен импорт"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 310,
+   "execution_count": 14,
    "id": "035e0a1c-a24b-4b02-a246-c31751ea96db",
    "metadata": {},
    "outputs": [
@@ -282,7 +283,7 @@
        "4                3                1                       1         2  "
       ]
      },
-     "execution_count": 310,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 311,
+   "execution_count": 15,
    "id": "ee007a3c-54e9-4ef0-a105-a5b8549d0417",
    "metadata": {},
    "outputs": [],
@@ -314,14 +315,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 312,
+   "execution_count": 16,
    "id": "22e39e1e-db88-450e-9acd-40bb7e860c3e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<style>#sk-container-id-18 {\n",
+       "<style>#sk-container-id-1 {\n",
        "  /* Definition of color scheme common for light and dark mode */\n",
        "  --sklearn-color-text: #000;\n",
        "  --sklearn-color-text-muted: #666;\n",
@@ -352,15 +353,15 @@
        "  }\n",
        "}\n",
        "\n",
-       "#sk-container-id-18 {\n",
+       "#sk-container-id-1 {\n",
        "  color: var(--sklearn-color-text);\n",
        "}\n",
        "\n",
-       "#sk-container-id-18 pre {\n",
+       "#sk-container-id-1 pre {\n",
        "  padding: 0;\n",
        "}\n",
        "\n",
-       "#sk-container-id-18 input.sk-hidden--visually {\n",
+       "#sk-container-id-1 input.sk-hidden--visually {\n",
        "  border: 0;\n",
        "  clip: rect(1px 1px 1px 1px);\n",
        "  clip: rect(1px, 1px, 1px, 1px);\n",
@@ -372,7 +373,7 @@
        "  width: 1px;\n",
        "}\n",
        "\n",
-       "#sk-container-id-18 div.sk-dashed-wrapped {\n",
+       "#sk-container-id-1 div.sk-dashed-wrapped {\n",
        "  border: 1px dashed var(--sklearn-color-line);\n",
        "  margin: 0 0.4em 0.5em 0.4em;\n",
        "  box-sizing: border-box;\n",
@@ -380,7 +381,7 @@
        "  background-color: var(--sklearn-color-background);\n",
        "}\n",
        "\n",
-       "#sk-container-id-18 div.sk-container {\n",
+       "#sk-container-id-1 div.sk-container {\n",
        "  /* jupyter's `normalize.less` sets `[hidden] { display: none; }`\n",
        "     but bootstrap.min.css set `[hidden] { display: none !important; }`\n",
        "     so we also need the `!important` here to be able to override the\n",
@@ -390,7 +391,7 @@
        "  position: relative;\n",
        "}\n",
        "\n",
-       "#sk-container-id-18 div.sk-text-repr-fallback {\n",
+       "#sk-container-id-1 div.sk-text-repr-fallback {\n",
        "  display: none;\n",
        "}\n",
        "\n",
@@ -406,14 +407,14 @@
        "\n",
        "/* Parallel-specific style estimator block */\n",
        "\n",
-       "#sk-container-id-18 div.sk-parallel-item::after {\n",
+       "#sk-container-id-1 div.sk-parallel-item::after {\n",
        "  content: \"\";\n",
        "  width: 100%;\n",
        "  border-bottom: 2px solid var(--sklearn-color-text-on-default-background);\n",
        "  flex-grow: 1;\n",
        "}\n",
        "\n",
-       "#sk-container-id-18 div.sk-parallel {\n",
+       "#sk-container-id-1 div.sk-parallel {\n",
        "  display: flex;\n",
        "  align-items: stretch;\n",
        "  justify-content: center;\n",
@@ -421,28 +422,28 @@
        "  position: relative;\n",
        "}\n",
        "\n",
-       "#sk-container-id-18 div.sk-parallel-item {\n",
+       "#sk-container-id-1 div.sk-parallel-item {\n",
        "  display: flex;\n",
        "  flex-direction: column;\n",
        "}\n",
        "\n",
-       "#sk-container-id-18 div.sk-parallel-item:first-child::after {\n",
+       "#sk-container-id-1 div.sk-parallel-item:first-child::after {\n",
        "  align-self: flex-end;\n",
        "  width: 50%;\n",
        "}\n",
        "\n",
-       "#sk-container-id-18 div.sk-parallel-item:last-child::after {\n",
+       "#sk-container-id-1 div.sk-parallel-item:last-child::after {\n",
        "  align-self: flex-start;\n",
        "  width: 50%;\n",
        "}\n",
        "\n",
-       "#sk-container-id-18 div.sk-parallel-item:only-child::after {\n",
+       "#sk-container-id-1 div.sk-parallel-item:only-child::after {\n",
        "  width: 0;\n",
        "}\n",
        "\n",
        "/* Serial-specific style estimator block */\n",
        "\n",
-       "#sk-container-id-18 div.sk-serial {\n",
+       "#sk-container-id-1 div.sk-serial {\n",
        "  display: flex;\n",
        "  flex-direction: column;\n",
        "  align-items: center;\n",
@@ -460,14 +461,14 @@
        "\n",
        "/* Pipeline and ColumnTransformer style (default) */\n",
        "\n",
-       "#sk-container-id-18 div.sk-toggleable {\n",
+       "#sk-container-id-1 div.sk-toggleable {\n",
        "  /* Default theme specific background. It is overwritten whether we have a\n",
        "  specific estimator or a Pipeline/ColumnTransformer */\n",
        "  background-color: var(--sklearn-color-background);\n",
        "}\n",
        "\n",
        "/* Toggleable label */\n",
-       "#sk-container-id-18 label.sk-toggleable__label {\n",
+       "#sk-container-id-1 label.sk-toggleable__label {\n",
        "  cursor: pointer;\n",
        "  display: flex;\n",
        "  width: 100%;\n",
@@ -480,13 +481,13 @@
        "  gap: 0.5em;\n",
        "}\n",
        "\n",
-       "#sk-container-id-18 label.sk-toggleable__label .caption {\n",
+       "#sk-container-id-1 label.sk-toggleable__label .caption {\n",
        "  font-size: 0.6rem;\n",
        "  font-weight: lighter;\n",
        "  color: var(--sklearn-color-text-muted);\n",
        "}\n",
        "\n",
-       "#sk-container-id-18 label.sk-toggleable__label-arrow:before {\n",
+       "#sk-container-id-1 label.sk-toggleable__label-arrow:before {\n",
        "  /* Arrow on the left of the label */\n",
        "  content: \"▸\";\n",
        "  float: left;\n",
@@ -494,13 +495,13 @@
        "  color: var(--sklearn-color-icon);\n",
        "}\n",
        "\n",
-       "#sk-container-id-18 label.sk-toggleable__label-arrow:hover:before {\n",
+       "#sk-container-id-1 label.sk-toggleable__label-arrow:hover:before {\n",
        "  color: var(--sklearn-color-text);\n",
        "}\n",
        "\n",
        "/* Toggleable content - dropdown */\n",
        "\n",
-       "#sk-container-id-18 div.sk-toggleable__content {\n",
+       "#sk-container-id-1 div.sk-toggleable__content {\n",
        "  max-height: 0;\n",
        "  max-width: 0;\n",
        "  overflow: hidden;\n",
@@ -509,12 +510,12 @@
        "  background-color: var(--sklearn-color-unfitted-level-0);\n",
        "}\n",
        "\n",
-       "#sk-container-id-18 div.sk-toggleable__content.fitted {\n",
+       "#sk-container-id-1 div.sk-toggleable__content.fitted {\n",
        "  /* fitted */\n",
        "  background-color: var(--sklearn-color-fitted-level-0);\n",
        "}\n",
        "\n",
-       "#sk-container-id-18 div.sk-toggleable__content pre {\n",
+       "#sk-container-id-1 div.sk-toggleable__content pre {\n",
        "  margin: 0.2em;\n",
        "  border-radius: 0.25em;\n",
        "  color: var(--sklearn-color-text);\n",
@@ -522,79 +523,79 @@
        "  background-color: var(--sklearn-color-unfitted-level-0);\n",
        "}\n",
        "\n",
-       "#sk-container-id-18 div.sk-toggleable__content.fitted pre {\n",
+       "#sk-container-id-1 div.sk-toggleable__content.fitted pre {\n",
        "  /* unfitted */\n",
        "  background-color: var(--sklearn-color-fitted-level-0);\n",
        "}\n",
        "\n",
-       "#sk-container-id-18 input.sk-toggleable__control:checked~div.sk-toggleable__content {\n",
+       "#sk-container-id-1 input.sk-toggleable__control:checked~div.sk-toggleable__content {\n",
        "  /* Expand drop-down */\n",
        "  max-height: 200px;\n",
        "  max-width: 100%;\n",
        "  overflow: auto;\n",
        "}\n",
        "\n",
-       "#sk-container-id-18 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {\n",
+       "#sk-container-id-1 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {\n",
        "  content: \"▾\";\n",
        "}\n",
        "\n",
        "/* Pipeline/ColumnTransformer-specific style */\n",
        "\n",
-       "#sk-container-id-18 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {\n",
+       "#sk-container-id-1 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {\n",
        "  color: var(--sklearn-color-text);\n",
        "  background-color: var(--sklearn-color-unfitted-level-2);\n",
        "}\n",
        "\n",
-       "#sk-container-id-18 div.sk-label.fitted input.sk-toggleable__control:checked~label.sk-toggleable__label {\n",
+       "#sk-container-id-1 div.sk-label.fitted input.sk-toggleable__control:checked~label.sk-toggleable__label {\n",
        "  background-color: var(--sklearn-color-fitted-level-2);\n",
        "}\n",
        "\n",
        "/* Estimator-specific style */\n",
        "\n",
        "/* Colorize estimator box */\n",
-       "#sk-container-id-18 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {\n",
+       "#sk-container-id-1 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {\n",
        "  /* unfitted */\n",
        "  background-color: var(--sklearn-color-unfitted-level-2);\n",
        "}\n",
        "\n",
-       "#sk-container-id-18 div.sk-estimator.fitted input.sk-toggleable__control:checked~label.sk-toggleable__label {\n",
+       "#sk-container-id-1 div.sk-estimator.fitted input.sk-toggleable__control:checked~label.sk-toggleable__label {\n",
        "  /* fitted */\n",
        "  background-color: var(--sklearn-color-fitted-level-2);\n",
        "}\n",
        "\n",
-       "#sk-container-id-18 div.sk-label label.sk-toggleable__label,\n",
-       "#sk-container-id-18 div.sk-label label {\n",
+       "#sk-container-id-1 div.sk-label label.sk-toggleable__label,\n",
+       "#sk-container-id-1 div.sk-label label {\n",
        "  /* The background is the default theme color */\n",
        "  color: var(--sklearn-color-text-on-default-background);\n",
        "}\n",
        "\n",
        "/* On hover, darken the color of the background */\n",
-       "#sk-container-id-18 div.sk-label:hover label.sk-toggleable__label {\n",
+       "#sk-container-id-1 div.sk-label:hover label.sk-toggleable__label {\n",
        "  color: var(--sklearn-color-text);\n",
        "  background-color: var(--sklearn-color-unfitted-level-2);\n",
        "}\n",
        "\n",
        "/* Label box, darken color on hover, fitted */\n",
-       "#sk-container-id-18 div.sk-label.fitted:hover label.sk-toggleable__label.fitted {\n",
+       "#sk-container-id-1 div.sk-label.fitted:hover label.sk-toggleable__label.fitted {\n",
        "  color: var(--sklearn-color-text);\n",
        "  background-color: var(--sklearn-color-fitted-level-2);\n",
        "}\n",
        "\n",
        "/* Estimator label */\n",
        "\n",
-       "#sk-container-id-18 div.sk-label label {\n",
+       "#sk-container-id-1 div.sk-label label {\n",
        "  font-family: monospace;\n",
        "  font-weight: bold;\n",
        "  display: inline-block;\n",
        "  line-height: 1.2em;\n",
        "}\n",
        "\n",
-       "#sk-container-id-18 div.sk-label-container {\n",
+       "#sk-container-id-1 div.sk-label-container {\n",
        "  text-align: center;\n",
        "}\n",
        "\n",
        "/* Estimator-specific */\n",
-       "#sk-container-id-18 div.sk-estimator {\n",
+       "#sk-container-id-1 div.sk-estimator {\n",
        "  font-family: monospace;\n",
        "  border: 1px dotted var(--sklearn-color-border-box);\n",
        "  border-radius: 0.25em;\n",
@@ -604,18 +605,18 @@
        "  background-color: var(--sklearn-color-unfitted-level-0);\n",
        "}\n",
        "\n",
-       "#sk-container-id-18 div.sk-estimator.fitted {\n",
+       "#sk-container-id-1 div.sk-estimator.fitted {\n",
        "  /* fitted */\n",
        "  background-color: var(--sklearn-color-fitted-level-0);\n",
        "}\n",
        "\n",
        "/* on hover */\n",
-       "#sk-container-id-18 div.sk-estimator:hover {\n",
+       "#sk-container-id-1 div.sk-estimator:hover {\n",
        "  /* unfitted */\n",
        "  background-color: var(--sklearn-color-unfitted-level-2);\n",
        "}\n",
        "\n",
-       "#sk-container-id-18 div.sk-estimator.fitted:hover {\n",
+       "#sk-container-id-1 div.sk-estimator.fitted:hover {\n",
        "  /* fitted */\n",
        "  background-color: var(--sklearn-color-fitted-level-2);\n",
        "}\n",
@@ -703,7 +704,7 @@
        "\n",
        "/* \"?\"-specific style due to the `<a>` HTML tag */\n",
        "\n",
-       "#sk-container-id-18 a.estimator_doc_link {\n",
+       "#sk-container-id-1 a.estimator_doc_link {\n",
        "  float: right;\n",
        "  font-size: 1rem;\n",
        "  line-height: 1em;\n",
@@ -718,31 +719,31 @@
        "  border: var(--sklearn-color-unfitted-level-1) 1pt solid;\n",
        "}\n",
        "\n",
-       "#sk-container-id-18 a.estimator_doc_link.fitted {\n",
+       "#sk-container-id-1 a.estimator_doc_link.fitted {\n",
        "  /* fitted */\n",
        "  border: var(--sklearn-color-fitted-level-1) 1pt solid;\n",
        "  color: var(--sklearn-color-fitted-level-1);\n",
        "}\n",
        "\n",
        "/* On hover */\n",
-       "#sk-container-id-18 a.estimator_doc_link:hover {\n",
+       "#sk-container-id-1 a.estimator_doc_link:hover {\n",
        "  /* unfitted */\n",
        "  background-color: var(--sklearn-color-unfitted-level-3);\n",
        "  color: var(--sklearn-color-background);\n",
        "  text-decoration: none;\n",
        "}\n",
        "\n",
-       "#sk-container-id-18 a.estimator_doc_link.fitted:hover {\n",
+       "#sk-container-id-1 a.estimator_doc_link.fitted:hover {\n",
        "  /* fitted */\n",
        "  background-color: var(--sklearn-color-fitted-level-3);\n",
        "}\n",
-       "</style><div id=\"sk-container-id-18\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>KNeighborsClassifier()</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-18\" type=\"checkbox\" checked><label for=\"sk-estimator-id-18\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow\"><div><div>KNeighborsClassifier</div></div><div><a class=\"sk-estimator-doc-link fitted\" rel=\"noreferrer\" target=\"_blank\" href=\"https://scikit-learn.org/1.6/modules/generated/sklearn.neighbors.KNeighborsClassifier.html\">?<span>Documentation for KNeighborsClassifier</span></a><span class=\"sk-estimator-doc-link fitted\">i<span>Fitted</span></span></div></label><div class=\"sk-toggleable__content fitted\"><pre>KNeighborsClassifier()</pre></div> </div></div></div></div>"
+       "</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>KNeighborsClassifier()</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" checked><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow\"><div><div>KNeighborsClassifier</div></div><div><a class=\"sk-estimator-doc-link fitted\" rel=\"noreferrer\" target=\"_blank\" href=\"https://scikit-learn.org/1.6/modules/generated/sklearn.neighbors.KNeighborsClassifier.html\">?<span>Documentation for KNeighborsClassifier</span></a><span class=\"sk-estimator-doc-link fitted\">i<span>Fitted</span></span></div></label><div class=\"sk-toggleable__content fitted\"><pre>KNeighborsClassifier()</pre></div> </div></div></div></div>"
       ],
       "text/plain": [
        "KNeighborsClassifier()"
       ]
      },
-     "execution_count": 312,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -762,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 313,
+   "execution_count": 17,
    "id": "cbbef9ce-e3de-4e3d-a526-ad66ee8050e1",
    "metadata": {},
    "outputs": [
@@ -770,9 +771,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Accuracy: [1.         0.92857143 0.89285714 0.92857143 1.        ]\n",
-      "Mean Test Accuracy: 0.9500\n",
-      "Train Accuracy: [0.9375     0.96428571 0.98214286 0.97321429 0.94642857]\n"
+      "Test Accuracy: [0.96428571 0.96428571 1.         0.92857143 1.        ]\n",
+      "Mean Test Accuracy: 0.9714\n",
+      "Train Accuracy: [0.98214286 0.98214286 0.97321429 0.98214286 0.98214286]\n"
      ]
     }
    ],
